tests/NormalTests/paczka1/fuzzy1/90807096.err
Error in line 6: a63tL S825 75,4
Error in line 13: eVPH7 S83 79,4
